Version 2.0.1
~~~~~~~~~~~~~~~~~~~~~~~~~~~
* Added new checkmpifxcorr utility
* Updates to phase cal extraction
* Added switched power detection (enable with TCAL FREQUENCY, optional line just above PHASE CAL INT (MHZ) ), currently only for mark5access based unpackers, and only works on 2-bit data.

Version 2.0.0, 2010 July 14
~~~~~~~~~~~~~~~~~~~~~~~~~~~
* Many bugfixes to both band matching and multiple phase centres
* Visibilities now written out in binary format
* New polyco parser and checker is more forgiving of TEMPO2 generated polycos
* Can now produce kurtosis dumps every STA under the command of difxfilterbank
* Many nativemk5 inmprovements migrated from 1.5
* Decorrelation correction is applied if uv shifting is done
* Catch rare datastream error where file ends exactly at end of databuffer 
  for a Mk5 files
* Allow for new VEX FILE line in calc file to be optional
* Bugfix for polycos with more than one entry
* Many more minor bugfixes

Version 2.0, 2009 September 24
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
* Many, many changes both visibly and under the hood
* Allows support of multiple phase centres
* Writes each pulsar bin/source to a different DiFX file
* More efficient implementation of station-based processing, using
  complex multiplications to replace many sin/cos calculations (~20% speedup)
* More cache-efficient implementation of baseline-based processing
  for correlations with many channels where whole output array can't
  fit in cache simultaneously (factor of ~2 speedup for >=2k channels)
* Allows support of zoom bands
* Replaces blockspersend with subintNS, guardBlocks with guardNS
* Shifts numchannels/oversample/decimation etc from Configuration to Freq
* Allows use of Rule table in input file
* Adds support for LO offsets
* mostly complete Mark5B support
* Mark5B eVLBI support
* Visibilities with zero weight are not written to disk
* See http://cira.ivec.org/dokuwiki/doku.php/difx/documentation for more info